<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/video_x_generic"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:drawablePadding="4dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editServer"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:ems="12"
        android:inputType="textNoSuggestions"
        android:hint="@string/serverHint"
        android:drawableStart="@drawable/ic_cloud_24"
        android:drawablePadding="4dp"/>


    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editServer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:ems="12"
        android:inputType="text"
        android:hint="@string/userameHint"
        android:drawableStart="@drawable/ic_account_24"
        android:drawablePadding="4dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:ems="12"
        android:inputType="textPassword"
        android:hint="@string/passowordHint"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="4dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:text="@string/loginLabel"/>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>